fixed images height not displaying correctly on safari

--- a/_fall_detection_page.scss
+++ b/_fall_detection_page.scss
@@ -46,9 +46,10 @@
 	#fall-detection {
 		.inline-desktop {
 			display: flex;
-			justify-content: space-between;
 			.img-inline {
-				width: 49%;
+				width: 50%;
+				height: auto;
+				max-height: 300px;
 			}
 		}
 
